# MEPHI_LABBS

./: ArraySequence.h  CMakeLists.txt  DinamicArray.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  MEPHI_LABBS.cpp  MEPHI_LABBS.sln  MEPHI_LABBS.vcxproj  MEPHI_LABBS.vcxproj.filters  Sequence.h  UI.cpp  UI.h  exeption.h  main.cpp  tests.cpp
